--- a/package.json
+++ b/package.json
@@ -1,8 +1,30 @@
 {
   "name": "word-maker",
-  "version": "0.1.0",
+  "description": "Word maker application",
+  "version": "0.0.1",
+  "license": "MIT",
+  "author": "Oleksandr Aleksieiev",
   "private": true,
+  "repository": {
+    "type": "git",
+    "url": "git+ssh://git@github.com:aleksieiev-o/word-maker.git"
+  },
+  "bugs": {
+    "url": "https://github.com/aleksieiev-o/word-maker/issues"
+  },
+  "homepage": "",
+  "scripts": {
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "lint": "eslint \"**/*.{ts,tsx}\"",
+    "lint-fix": "npm run lint --fix",
+    "eject": "react-scripts eject",
+    "prepare": "husky install"
+  },
   "dependencies": {
+    "@chakra-ui/react": "^2.8.1",
+    "@chakra-ui/theme-tools": "^2.1.1",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -10,8 +32,11 @@
     "@types/node": "^17.0.45",
     "@types/react": "^18.2.22",
     "@types/react-dom": "^18.2.7",
+    "env-cmd": "^10.1.0",
+    "gh-pages": "^6.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.16.0",
     "react-scripts": "5.0.1",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4",
@@ -28,11 +53,19 @@
     "workbox-strategies": "^6.6.0",
     "workbox-streams": "^6.6.0"
   },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+  "devDependencies": {
+    "@types/react-router-dom": "^5.3.3",
+    "@typescript-eslint/eslint-plugin": "^5.54.0",
+    "@typescript-eslint/parser": "^5.62.0",
+    "autoprefixer": "^10.4.16",
+    "eslint": "^8.50.0",
+    "eslint-config-prettier": "^9.0.0",
+    "eslint-plugin-prettier": "^5.0.0",
+    "eslint-plugin-react": "^7.33.2",
+    "husky": "^8.0.3",
+    "lint-staged": "^14.0.1",
+    "postcss": "^8.4.30",
+    "prettier": "^3.0.3"
   },
   "eslintConfig": {
     "extends": [
