added header, logo icons

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "word-maker",
-  "description": "Word maker application",
+  "name": "words-maker",
+  "description": "Words maker application",
   "version": "0.0.1",
   "license": "MIT",
   "author": "Oleksandr Aleksieiev",
