--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   "bugs": {
     "url": "https://github.com/aleksieiev-o/word-maker/issues"
   },
-  "homepage": "https://aleksieiev-o.github.io/word-maker",
+  "homepage": "",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
