chande get random value func

--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "workbox-streams": "^6.6.0"
   },
   "devDependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "@types/react-router-dom": "^5.3.3",
     "@typescript-eslint/eslint-plugin": "^5.54.0",
     "@typescript-eslint/parser": "^5.62.0",
